[package]
name = "mocosmos"
version = "0.1.0"
edition = "2025"

[dependencies]
macroquad = "0.4.14"
flecs_ecs = "0.1.3"
rapier2d = { version = "0.25.0", features = [ "simd-stable" ] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
debug = false
split-debuginfo = '...'  # Platform-specific.
debug-assertions = false
overflow-checks = false
incremental = false
rpath = false
