[package]
name = "mocosmos"
version = "0.1.0"
edition = "2024"

[dependencies]
macroquad = "0.4.14"
bevy_app = { version = "0.16.0" }
bevy_ecs = { version = "0.16.0" }
bitflags = { version = "2.9.0" }
rapier2d = { version = "0.25.0", features = [ "simd-stable" ] }
rusqlite = { version = "0.35.0", features = ["bundled"] }
crossbeam = { version = "0.8.4" }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
debug = false
split-debuginfo = '...'  # Platform-specific.
debug-assertions = false
overflow-checks = false
incremental = false
rpath = false
